navbar slider no longer wraps spacing widgets more proton updates fix stretched urlbar icons caused by proton back to the purple picture-in-picture button

--- a/uc-ctrl-tab.css
+++ b/uc-ctrl-tab.css
@@ -6,12 +6,13 @@
     -moz-appearance: none !important;
     color: white !important;
     border-style: none !important;
-    padding: 40px 20px 30px 50px !important;
+    padding: 40px 20px 20px 20px !important;
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; */
     font-weight: normal !important;
     text-shadow: 0 0 2px hsl(0, 0%, 8%), 0 0 2px hsl(0, 0%, 8%) !important;
     box-shadow: none !important;
-    background: transparent !important;
+    background-color: var(--ctrlTab-bgcolor) !important;
+    border-radius: 5px !important;
 }
 
 .ctrlTab-preview:not(#ctrlTab-showAll)>*>.ctrlTab-preview-inner {
